syntax = "proto3";

package juno.identifiers;

message ProjectIdentifier {
  oneof identifier {
    int64 id = 1;
    string name = 2;
  }
}

message UserIdentifier {
  oneof identifier {
    int64 id = 1;
    string email = 2;
  }
}

message EmailSenderIdentifier {
  string domain = 1;
  string username = 2;
}

message ApiKeyIdentifier {
  oneof identifier {
    int64 id = 1;
    string hash = 2;
  }
}

message FileIdentifier {
  string bucketName = 1;
  int32 configId = 2;
  string configEnv = 4;
  string path = 3;
}

message FileConfigIdentifier {
  int64 id = 1;
  string environment = 2;
}
